[metadata]
name = afc-neutron
summary = Asterfusion Device Configuration Service
author = Asterfution
home-page = https://docs.openstack.org/neutron/latest/
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    setuptools >= 40.9.0
    wheel

    fc_tools
    asterdevlib

    Paste # MIT
    PasteDeploy>=1.5.0 # MIT
    Routes>=2.3.1 # MIT
    debtcollector>=1.2.0 # Apache-2.0
    pecan!=1.0.2,!=1.0.3,!=1.0.4,!=1.2,>=1.0.0 # BSD
    httplib2>=0.7.5 # MIT
    Jinja2!=2.9.0,!=2.9.1,!=2.9.2,!=2.9.3,!=2.9.4,>=2.8 # BSD License (3 clause)
    netaddr!=0.7.16,>=0.7.13 # BSD
    neutron-lib==1.9.2 # Apache-2.0
    python-neutronclient>=6.3.0 # Apache-2.0
    tenacity>=3.2.1 # Apache-2.0
    SQLAlchemy!=1.1.5,!=1.1.6,!=1.1.7,!=1.1.8,>=1.0.10 # MIT
    WebOb>=1.7.1 # MIT
    keystoneauth1>=3.1.0 # Apache-2.0
    alembic>=0.8.10 # MIT
    six>=1.9.0 # MIT
    stevedore>=1.20.0 # Apache-2.0
    oslo.cache>=1.5.0 # Apache-2.0
    oslo.concurrency>=3.8.0 # Apache-2.0
    oslo.config!=4.3.0,!=4.4.0,>=4.0.0 # Apache-2.0
    oslo.context>=2.14.0 # Apache-2.0
    oslo.db>=4.24.0 # Apache-2.0
    oslo.i18n!=3.15.2,>=2.1.0 # Apache-2.0
    oslo.log>=3.22.0 # Apache-2.0
    oslo.messaging!=5.25.0,>=5.24.2 # Apache-2.0
    oslo.middleware>=3.27.0 # Apache-2.0
    oslo.privsep!=1.17.0,>=1.9.0 # Apache-2.0
    oslo.reports>=0.6.0 # Apache-2.0
    oslo.rootwrap>=5.0.0 # Apache-2.0
    oslo.serialization!=2.19.1,>=1.10.0 # Apache-2.0
    oslo.service>=1.10.0 # Apache-2.0
    oslo.utils>=3.20.0 # Apache-2.0
    oslo.versionedobjects>=1.17.0 # Apache-2.0
    osprofiler>=1.4.0 # Apache-2.0
    psutil>=3.2.2 # BSD
    weakrefmethod>=1.0.2;python_version=='2.7' # PSF
    pyhash == 0.8.3
    uwsgi == 2.0.18

    ujson
    wsme
    IPy == 1.0
    future


[options.entry_points]
console_scripts =
    neutron-db-manage = neutron.db.migration.cli:main

[build_sphinx]
all_files = 1
build-dir = built_docs/
source-dir = docs/
project = 'afc_neutron'
version = 0.1
release = 0.1.0
warning-is-error = 1
